--- a/emailops-build/roles/build-nginx/vars/main.yml
+++ b/emailops-build/roles/build-nginx/vars/main.yml
@@ -9,7 +9,7 @@
 group_id: 454
 group_name: nginx
 addl_groups:
-home_dir: /var/lib/nginx
+home_dir: /opt/home/nginx
 user_name: nginx
 user_shell: /sbin/nologin
 user_uid: 454
