--- a/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
@@ -3,6 +3,57 @@
 #   DESCRIPTION:  Perform post-installation configuration
 #==============================================================================
 ---
+- name: Check if /opt/ecelerity exists
+  stat:
+    path=/opt/ecelerity
+    get_md5=no
+  register: dir_exists
+
+- name: If /opt/ecelerity exists, move its content to /opt/msys/ecelerity
+  command: mv /opt/ecelerity/bin/* /opt/msys/ecelerity/bin
+  when: dir_exists.stat.exists
+
+- name: Remove /opt/ecelerity
+  file:
+    path=/opt/ecelerity
+    state=absent
+  when: dir_exists.stat.exists
+
+- name: Create symlink /opt/ecelerity => /opt/msys/ecelerity
+  file:
+    group="{{ group_name }}"
+    owner="{{ user_name }}"
+    path=/opt/ecelerity
+    src=/opt/msys/ecelerity
+    state=link
+
+- name: Change permissions on /opt/msys
+  file:
+    group="{{ group_name }}"
+    owner="{{ user_name }}"
+    path=/opt/msys
+    recurse=yes
+    state=directory
+
+- name: Change permissions on /var/log/ecelerity
+  file:
+    group="{{ group_name }}"
+    owner="{{ user_name }}"
+    path=/var/log/ecelerity
+    recurse=yes
+    state=directory
+
+##
+## SVN checkout
+##
+- name: (POSTINSTALL) Check out current configuration from cluster manager (MTA)
+  subversion:
+    dest=/opt/msys/ecelerity/conf
+    password="{{ svn_password }}"
+    repo="{% if server_type is smtp %}{{ outbound.svn.host }}{% else %}{{ inbound.svn.host }}{% endif %}"
+    revision=HEAD
+    username=admin
+  when: is_mta|bool
 
 ##
 ## Copy updated global configuration
