--- a/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
@@ -24,7 +24,7 @@
     group="{{ group_name }}"
     owner="{{ user_name }}"
     path=/opt/ecelerity
-    src=/opt/msys/ecelerity
+    src="{{ install_dir }}"
     state=link
 
 - name: Change permissions on /opt/msys
@@ -48,15 +48,15 @@
 ##
 - name: (POSTINSTALL) Check out current configuration from cluster manager (MTA)
   subversion:
-    dest=/opt/msys/ecelerity/conf
+    dest="{{ install_dir }}/conf/"
     password="{{ svn_password }}"
-    repo="{% if server_type is smtp %}{{ outbound.svn.host }}{% else %}{{ inbound.svn.host }}{% endif %}"
+    repo="{{ svn.host }}"
     revision=HEAD
     username=admin
   when: is_mta|bool
 
 ##
-## Copy updated global configuration
+## Copy updated global configuration (global)
 ##
 - name: (POSTINSTALL) Apply configuration files (global)
   synchronize:
@@ -68,7 +68,7 @@
     src=global
 
 ##
-## copy default (domain-specific) configuration
+## copy default configuration (MTA)
 ##
 - name: (POSTINSTALL) Apply configuration files (default)
   synchronize:
@@ -78,6 +78,7 @@
     rsync_timeout=0
     rsync_opts="-avr --delete --no-motd --stats --progress"
     src=default
+  when: is_mta|bool
 
 ##
 ## Copy customizations to config
@@ -85,7 +86,7 @@
 - name: (POSTINSTALL) Create eccluster.conf
   template:
     src=eccluster.j2
-    dest="/opt/msys/ecelerity/etc/conf/global"
+    dest="{{ install_dir }}/etc/conf/global"
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0644
@@ -93,34 +94,46 @@
 - name: (POSTINSTALL) Create ecelerity-cluster.conf
   template:
     src=ecelerity-cluster.j2
-    dest="/opt/msys/ecelerity/etc/conf/global"
+    dest="{{ install_dir }}/etc/conf/global"
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0644
 
-- name: (POSTINSTALL) Create ecelerity.conf
+- name: (POSTINSTALL) Create ecelerity.conf (Cluster Manager)
   template:
     src=ecelerity.j2
-    dest="/opt/msys/ecelerity/etc/conf/global"
+    dest="{{ install_dir }}/etc/conf/default"
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0644
+  when: is_ecmgr|bool
+
+- name: (POSTINSTALL) Create ecelerity.conf (MTA)
+  template:
+    src=ecelerity.j2
+    dest="{{ install_dir }}/etc/conf/default"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
+    mode=0644
+  when: is_mta|bool
 
 - name: (POSTINSTALL) Create client_vars.siv
   template:
     src=client_vars.j2
-    dest="/opt/msys/ecelerity/etc/conf/default/siv"
+    dest="{{ install_dir }}/etc/conf/default/siv"
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0600
+  when: is_mta|bool
 
 - name: (POSTINSTALL) Create auth.lua
   template:
     src=auth.j2
-    dest="/opt/msys/ecelerity/etc/conf/default/lua"
+    dest="{{ install_dir }}/etc/conf/default/lua"
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0644
+  when: is_mta|bool
 
 ##
 ## update sysctl
