--- a/emailops-build/group_vars/ecelerity/install-config.yml
+++ b/emailops-build/group_vars/ecelerity/install-config.yml
@@ -8,7 +8,7 @@
 ##
 install_dir: /opt/msys/ecelerity
 manager_hostname: "xfer01.{{ client_name }}.{{ datacenter }}.synacor.com"
-manager_ipaddr: "1.2.3.4"
+manager_ipaddr: 10.250.27.7
 cluster_group: ec_cluster
 control_group: ec_console
 db_init: n
